<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F0C6" >

    <TextView
        android:id="@+id/textView7"
        android:layout_width="414dp"
        android:layout_height="118dp"
        android:layout_marginTop="64dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/staffPage"
        android:textSize="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.619"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/change_bill"
        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:background="#FBF3A6"
        android:gravity="center"
        android:onClick="memu"
        android:text="@string/checkMenu"
        android:textColor="#7A7A7A"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView16" />

    <Button
        android:id="@+id/check_order"
        android:layout_width="180dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:background="#FBF3A6"
        android:gravity="center"
        android:onClick="check_order"
        android:text="@string/checkOrder"
        android:textColor="#7A7A7A"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_bill" />

    <Button
        android:id="@+id/check_order2"
        android:layout_width="180dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:background="#FBF3A6"
        android:gravity="center"
        android:onClick="homepage"
        android:text="@string/HomePage"
        android:textColor="#7A7A7A"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_order" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="300dp"
        android:layout_height="216dp"
        android:layout_marginTop="168dp"
        android:background="#F3F0C6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tool" />

</androidx.constraintlayout.widget.ConstraintLayout>