<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8DADF1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/wc"
        android:layout_width="wrap_content"
        android:layout_height="155dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wc" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="WcDonald's"
        android:textColor="#FEC323"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wc" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center"
        android:text="@string/askIdentity"
        android:textColor="#FEFA23"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/cus"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="#FFECC8"
        android:onClick="cusBtn"
        android:text="@string/btnCus"
        android:textColor="#8BA8E3"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/staff"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="220dp"
        android:backgroundTint="#F6E6C7"
        android:onClick="stfBtn"
        android:text="@string/btnStaff"
        android:textColor="#8BA8E3"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toEndOf="@+id/cus" />
</androidx.constraintlayout.widget.ConstraintLayout>